# cursework_03

./: .gitignore  README.md  functions.py  pyproject.toml  tech_task.txt
src/: functions.py  main.py
tests/: test_functions.py  test_main.py
